<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_bg">
        <ImageView
            android:id="@+id/img_title"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:src="@drawable/bbbb"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/img_title"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/title_name"
            android:textColor="@color/title_text"/>
        <Button
            android:id="@+id/btn_chat_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/chat_records"
            android:background="#00000000"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_record"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/voice_switch"
            android:checked="true"
            android:textOff="@string/text"
            android:textOn="@string/voice"
            />
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />
            <Button
                android:id="@+id/btn_voice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/btn_voice_bg"
                android:text="@string/str_talk"
                android:visibility="gone"/>
        </FrameLayout>
        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:background="@color/btn_voice_bg"
            />
    </LinearLayout>

</LinearLayout>
